Bug 426461 - In Dolphin terminal panel, Ctrl+Shift+C triggers an ambiguous shortcut popup
Summary: In Dolphin terminal panel, Ctrl+Shift+C triggers an ambiguous shortcut popup
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: terminal (other bugs)
Version First Reported In: 20.08.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: regression, usability
: 426762 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-09-13 02:51 UTC by nyanpasu64
Modified: 2021-01-16 18:21 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nyanpasu64 2020-09-13 02:51:35 UTC
SUMMARY
When Dolphin's terminal panel is highlighted, Ctrl+Shift+C triggers "Copy location" in the main panel, as well as "copy selection" in the terminal.

STEPS TO REPRODUCE
1. Open Dolphin and press F4 to open the terminal.
2. In the main panel, make sure an item is selected.
2. Press F4 to open the terminal.
3. Focus the terminal and optionally select text.
4. Press Ctrl+Shift+C.

OBSERVED RESULT
Ctrl+Shift+C copies the path of the item highlighted in the *main view* (even though the terminal is focused). If you have a selection in the terminal, you get an ambiguous key sequence popup.

EXPECTED RESULT
When the terminal is focused, Ctrl+Shift+C does not copy the path of an item selected in the file browser view.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.73.0
Qt Version: 5.15.0
Kernel Version: 5.8.7-arch1-1
OS Type: 64-bit
Processors: 8 × AMD Ryzen 7 3700U with Radeon Vega Mobile Gfx
Memory: 13.6 GiB of RAM
Graphics Processor: AMD RAVEN

ADDITIONAL INFORMATION

"Copy location" was added in 86e3b82e on Jun 29, 2020 (https://github.com/KDE/dolphin/commit/86e3b82efbbcdb287773cdaf6a5f4c1c22bb9fc6).
Comment 1 Julian Steinmann 2020-09-14 19:50:05 UTC
Can confirm with 20.11.70 on KDE Neon Unstable.
Comment 2 Elvis Angelaccio 2020-09-20 21:23:52 UTC
*** Bug 426762 has been marked as a duplicate of this bug. ***
Comment 3 Elvis Angelaccio 2020-09-20 21:25:04 UTC
@Nate: what should we do here? Should we change the shortcut?
Comment 4 Nate Graham 2020-09-21 02:41:30 UTC
My vote would be to change the "Copy location" action's shortcut to Ctrl+Alt+C. IMO that's a more intuitive shortcut anyway since it's an alternate form of copying.
Comment 5 nyanpasu64 2020-09-21 02:44:56 UTC
Do you plan to disable "copy location" when the terminal is highlighted instead of the main panel? How does it work when the sidebar or other panels are focused? (sorry I'm not on KDE at the moment)
Comment 6 Ilya w495 Nikitin 2020-11-15 03:33:17 UTC
I have the same problem:

Operating System: Manjaro Linux
KDE Plasma Version: 5.20.2
KDE Frameworks Version: 5.76.0
Qt Version: 5.15.1
Kernel Version: 5.9.3-1-MANJARO
OS Type: 64-bit
Processors: 16 × Intel® Core™ i9-9900K CPU @ 3.60GHz
Memory: 125,7 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 630


Also discussed here:
* https://unix.stackexchange.com/questions/605671/key-sequence-ambiguous-in-konsole

I suppose Ctrl+Alt+L — is more intuitive for «Copy (L)ocation»
Comment 7 Elvis Angelaccio 2021-01-16 18:21:52 UTC
Git commit 764861af51ec0a4f124886567725f9950961f6e6 by Elvis Angelaccio, on behalf of The Imp.
Committed on 16/01/2021 at 18:15.
Pushed by elvisangelaccio into branch 'release/20.12'.

Change copy location shortcut in dolphin so as to not conflict with Konsole panel
FIXED-IN: 20.12.2

M  +1    -1    src/views/dolphinviewactionhandler.cpp

https://invent.kde.org/system/dolphin/commit/764861af51ec0a4f124886567725f9950961f6e6