Change copy location shortcut in dolphin so as to not conflict with Konsole panel

BUG: 426461
FIXED-IN: 20.12.2